--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="account">帳號</string>
+    <string name="password">密碼</string>
+    <string name="input_tip">請輸入帳號密碼</string>
+    <string name="btn_login">登入</string>
+    <string name="forget_psd">忘記密碼</string>
+    <string name="register">註冊</string>
 </resources>
