--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="btn_login">登入</string>
     <string name="forget_psd">忘記密碼</string>
     <string name="register">註冊</string>
+
+    <string name="recommon">推薦</string>
+    <string name="local">附近</string>
+    <string name="input_search">輸入搜尋</string>
 </resources>
